# django_rest_project_management_api

./: README.md
.github/workflows/: deploy.yml
project_management_system/: .dockerignore  .env  Dockerfile  db.sqlite3  entrypoint.sh  pyproject.toml  requirements.txt
project_management_system/images/: authorize_access_token  copy_access_token  get_all_project_details  paste_access_token  sample_user_login_credentials  swagger_api_documentation
project_management_system/project_management_system/: settings.py  urls.py
project_management_system/techforing_pms/: admin.py  apps.py  models.py  populate_db.py  serializers.py
project_management_system/techforing_pms/migrations/: 0001_initial.py  0002_alter_user_managers_user_groups_user_is_active_and_more.py
project_management_system/techforing_pms/urls/: comments_urls.py  projects_urls.py  tasks_urls.py  users_urls.py
project_management_system/techforing_pms/views/: comments.py  projects.py  tasks.py  users.py
project_management_system/test_template/: urls.py  views.py
